--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
   firebase_auth: ^4.19.6
   cloud_firestore: ^4.17.4
   flutter_screenutil: ^5.9.1
+  smooth_page_indicator: ^1.1.0
+  smooth_star_rating_null_safety: ^1.0.4+2
+  carousel_slider: ^4.2.1
+  cached_network_image: ^3.3.1
 
 dev_dependencies: 
   flutter_test:
@@ -69,6 +73,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/images/
+     - assets/icon/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
